kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
spec:
  hostnames:
  - "flux-webhook.brenix.com"
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  rules:
  - backendRefs:
    - name: webhook-receiver
      namespace: flux-system
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /hook/
